--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ gunicorn==19.9.0
 gevent==1.3.7
 requests==2.18.4
 MechanicalSoup==0.11.0
+pipe==1.5.0
 git+https://github.com/sergiors/pyf.git#egg=pyf
